backend-server/k8s-services-iot/grafana/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: iot
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/grafana`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  tls:
    certResolver: letsencrypt
